deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: quote-collector
spec:
  replicas: 2
  selector:
    matchLabels: 
      app: quoteCollector
  template: 
    metadata:
      labels:
        app: quoteCollector
    spec:
      containers: 
      - name: frontend
        image: tishathakral/quote-collector:00b3e5c411eb5efe70debf2e56159302b6a35fe3
        ports: 
        - containerPort: 3000
