manifest.yml
apiVersion: v1
kind: Pod
metadata: 
  name: nginx
  labels:
    app: nginx
spec: 
  containers:
  - name: nginx
    image: nginx
    ports: 
    - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata: 
  name: httpd
  labels:
    app: httpd
spec: 
  containers:
  - name: httpd
    image: httpd
    ports: 
    - containerPort: 80
